syntax = "proto3";
option go_package="/proto_gen";

import "google/protobuf/timestamp.proto";
import "gorm.proto";

message Book {
  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  DeletedAt deleted_at = 4;
  string title = 5;
  string description = 6;
  string author = 7;
}

message CreateBookRequest {
  string title = 1;
  string description = 2;
  string author = 3;
}

message CreateBookResponse {
  string status = 1; 
  string message = 2;
  Book book = 3;
}

message GetAllBooksRequest {}

message GetAllBooksResponse {
    Book book = 1;
}

message GetBookByIDRequest {
    string id = 1;
}

message GetBookByIDResponse {
  string status = 1; 
  string message = 2;
  Book book = 3;
}

service BookService {
    rpc GetAllBooks (GetAllBooksRequest) returns (stream GetAllBooksResponse);
    rpc GetBookByID (GetBookByIDRequest) returns (GetBookByIDResponse);
    rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
}
