syntax = "proto3";
option go_package="/proto_gen";

import "google/protobuf/timestamp.proto";
import "gorm.proto";

message Rent {
    uint32 id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    DeletedAt deleted_at = 4;
    int32 user_id = 5;
    int32 book_id = 6;
    string book_title = 7;
}

message GetAllRentsRequest {
    string user_id = 1;
}

message GetAllRentsResponse {
    Rent rent = 1;
}

message CreateRentRequest {
    int32 user_id = 1;
    int32 book_id = 2;
    string book_title = 3;
}

message CreateRentResponse {
    string status = 1; 
    string message = 2;
    Rent rent = 3;
}

service RentService {
    rpc GetAllRents (GetAllRentsRequest) returns (stream GetAllRentsResponse);
    rpc CreateRent (CreateRentRequest) returns (CreateRentResponse);
}